fixed color and contrast

--- a/style.css
+++ b/style.css
@@ -133,3 +133,13 @@ ul.secondary li p {
 main {
   border: 1px solid white;
 }
+
+/* Your fixes below */
+
+body {
+  background: #303a52;
+}
+
+nav {
+  background: #2c354a;
+}
